--- a/ansible/roles/db/templates/mongod.conf.j2
+++ b/ansible/roles/db/templates/mongod.conf.j2
@@ -13,4 +13,4 @@ systemLog:
 # network interfaces
 net:
   port: {{ mongo_port | default('27017') }}
-  bindIp: {{ mongo_bind_ip }}
+  bindIp: 0.0.0.0
